# tos_cli

./: .gitignore  CROSS_PLATFORM.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PUBLISH.md  QUICKSTART.md  README.md  READY_TO_PUBLISH.md  SETUP.md  TEST_RESULTS.md  feature_Nov18.md  main.py  pyproject.toml
.tos_config/: tos_env.csv
dev_notes/: sample_launch.json
example_config/: tos_env.csv
example_template/budget/: .gitignore  README.md  notes.txt
wrappers/cmd/: td.cmd  tos-cd.cmd  tos.cmd
wrappers/powershell/: tos.ps1
