[project]
name = "tos-tool"
version = "0.1.0"
description = "Personal Swiss knife tool for digital standardization"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["cli", "productivity", "environment", "templates", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1.7",
    "openpyxl>=3.1.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/tos_tool"
Repository = "https://github.com/yourusername/tos_tool"
Issues = "https://github.com/yourusername/tos_tool/issues"
Documentation = "https://github.com/yourusername/tos_tool/blob/main/README.md"

[project.scripts]
tos = "main:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

